# neat-proc

./: README.md  doc.tex  notes.txt  pyproject.toml  setup.py
examples/: xor.ini  xor.py
neat/: __init__.py  activations.py  aggregations.py  evaluators.py  fitness.py  genes.py  innovation.py  logging.py  parameters.py  population.py  reproduction.py  speciation.py  species.py  stagnation.py  types.py  utils.py
neat/genomes/: __init__.py  connection_schemes.py  genome.py
neat/networks/: __init__.py  feed_forward.py  graph.py  network.py  utils.py
tests/: data.py  test_genes.py  test_paramaters.py
tests/datafiles/: example_config.ini
